--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -20,6 +20,7 @@ body {
   width: 200px;
   cursor: pointer;
   transition-duration: 0.4s;
+  text-transform: capitalize;
 }
 
 .pk-button:hover {
@@ -31,4 +32,61 @@ body {
 
 .pokemon-list {
   list-style-type: none;
+}
+#pk-modal-container {
+position: fixed;
+padding: 30px;
+box-sizing: border-box;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+z-index: 999;
+overflow: auto;
+display: grid;
+text-align: center;
+}
+
+.pkModal {
+  color:#000000;
+  margin: auto;
+  display: inline-block;
+  box-sizing: border-box;
+  background: #fff;
+  padding: 15px;
+  width: 100%;
+  max-width: 700px;
+
+}
+.pk-modal-close {
+  float: right;
+  -webkit-appearance: none;
+  border: 0;
+  background: none;
+  text-decoration: underline;
+}
+
+.pkModal h1 {
+  margin-top: 0;
+  text-align: left;
+  text-transform: capitalize;
+}
+
+.pkModal p {
+  text-align: left;
+  margin-bottom: 0;
+}
+
+#pk-modal-container {
+  display: none;
+}
+
+#pk-modal-container.is-visible {
+  display: block;
+}
+
+.pkimage {
+  height: 30%;
+  width: 30%;
+  float: right;
 }
