--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -9,8 +9,8 @@ body {
 }
 .pk-button {
   background-color: rgba(0,0,0,0.0);
-  color: #FFFFFF;
-  border:10px solid #FFFFFF;
+  color: #ffcb05;
+  border:10px solid #ffcb05;
   padding: 16px 32px;
   text-align: center;
   text-decoration: none;
@@ -28,26 +28,16 @@ body {
   color:#000000;
   background-color:#FFFFFF;
   letter-spacing: 2px;
+
 }
 
 .pokemon-list {
-  list-style-type: none;
-}
-#pk-modal-container {
-position: fixed;
-padding: 30px;
-box-sizing: border-box;
-top: 0;
-left: 0;
-width: 100%;
-height: 100%;
-z-index: 999;
-overflow: auto;
-display: grid;
-text-align: center;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: auto;
 }
 
-.pkModal {
+#pkModal {
   color:#000000;
   margin: auto;
   display: inline-block;
@@ -58,35 +48,22 @@ text-align: center;
   max-width: 700px;
 
 }
-.pk-modal-close {
-  float: right;
-  -webkit-appearance: none;
-  border: 0;
-  background: none;
-  text-decoration: underline;
+
+img {
+  margin: 20px;
+
 }
 
-.pkModal h1 {
-  margin-top: 0;
-  text-align: left;
-  text-transform: capitalize;
-}
+  .notCapitalised {
+    text-transform: none;
+  }
 
-.pkModal p {
-  text-align: left;
-  margin-bottom: 0;
-}
+   .list-group-item{
+    background: none;
+    border: none;
+  }
 
-#pk-modal-container {
-  display: none;
-}
-
-#pk-modal-container.is-visible {
-  display: block;
-}
-
-.pkimage {
-  height: 30%;
-  width: 30%;
-  float: right;
-}
+  @media all and (max-width: 600px) {
+    .pokemon-list {
+      grid-template-columns: 1fr 1fr;
+      }};
