--- a/src/CSS/styles.css
+++ b/src/CSS/styles.css
@@ -16,10 +16,10 @@ body {
   text-decoration: none;
   display: inline-block;
   font-size: 18px;
-  margin: 6px 6px;
-  width: 200px;
+  margin: 12px 6px;
+  width: 100%;
   cursor: pointer;
-  transition-duration: 0.4s;
+  transition-duration: 0.3s;
   text-transform: capitalize;
 }
 
@@ -39,11 +39,14 @@ body {
 
 #pkModal {
   color:#000000;
+  align-items: center;
+  text-align: center;
+  text-transform: capitalize;
   /* margin: auto; */
   /* display: inline-block; */
   box-sizing: border-box;
   /* background: #fff; */
-  padding: 15px;
+  /*padding: 15px;*/
   /* width: 100%; */
   /* max-width: 700px; */
 }
